--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "plugin:jsx-a11y/recommended",
         "plugin:import/recommended",
         "airbnb",
+        "airbnb-typescript",
         "plugin:react/jsx-runtime",
         "plugin:@typescript-eslint/recommended",
         "prettier"
@@ -19,7 +20,8 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": ["./tsconfig.json"]
     },
     "plugins": [
         "react",
@@ -29,6 +31,29 @@
       "import/prefer-default-export": "warn",
       "default-param-last": "off",
       "no-underscore-dangle": "off",
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+      "no-shadow": "off",
+      "lines-between-class-members": "off",
+      "@typescript-eslint/lines-between-class-members": "off",
+      "@typescript-eslint/naming-convention": ["error",
+      {
+        "format": ["camelCase", "strictCamelCase", "PascalCase", "StrictPascalCase", "snake_case", "UPPER_CASE"],
+        "leadingUnderscore": "allow",
+         "selector": "variable"
+        }],
+      "react/function-component-definition": [
+        2,
+        {
+          "namedComponents": ["arrow-function", "function-declaration"],
+          "unnamedComponents": "arrow-function"
+        }
+      ],
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        }
+      }
     }
 }
