--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.4",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
