Feature: add cypress tests for d'n'd fetures and modal windows

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,9 @@
         "sourceType": "module",
         "project": ["./tsconfig.json"]
     },
+    "ignorePatterns": [
+      "cypress.config.ts"
+    ],
     "plugins": [
         "react",
         "@typescript-eslint"
